# wc2026-kalshi-screener

./: .gitignore  README.md  grade_day.sh  pyproject.toml
infra/: README.md  app.py  build_lambda.sh  cdk.json  requirements.txt  screener_stack.py
src/screener/: __init__.py  config.py  countries.py  grade.py  guardrails.py  logging.py  models.py  pipeline.py  report.py  run.py  screening.py  settle.py  storage.py  venues.py
src/screener/aws/: __init__.py  email.py  handler.py  s3_store.py  secrets.py
src/screener/clients/: __init__.py  cache.py  http.py  kalshi.py  kalshi_markets.py  news.py  odds.py  polymarket.py
src/screener/pricing/: __init__.py  engine.py  poisson.py  xg.py
tests/: conftest.py  test_aws.py  test_cache.py  test_countries.py  test_engine.py  test_grade.py  test_guardrails.py  test_http.py  test_kalshi.py  test_kalshi_markets.py  test_models.py  test_news.py  test_odds.py  test_pipeline.py  test_poisson.py  test_polymarket.py  test_report.py  test_screening.py  test_settle.py  test_storage.py  test_xg.py
tests/fixtures/: kalshi_event_usamex.json  kalshi_events_page1.json  kalshi_events_page2.json  news_injuries_empty.json  news_injuries_usa.json  odds_degraded.json  odds_wc.json  polymarket_ger_par.json
