[project]
name = "wc2026-kalshi-screener"
version = "0.1.0"
description = "World Cup 2026 Kalshi edge screener — decision support only, never an autotrader."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "structlog>=24.1",
    "requests>=2.31",   # HTTP for read-only API clients (deliverable 3+)
    "tenacity>=8.2",    # retry policy for transient API failures
]

# AWS deps (boto3, aws-cdk) are still intentionally deferred to the deploy
# deliverable. The screener stays runnable locally without them.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# AWS runtime deps for the Lambda handler (S3/SES/Secrets via boto3). The Lambda
# runtime already ships boto3; this extra is for local packaging/testing. The CDK
# app has its own requirements under infra/.
aws = [
    "boto3>=1.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/screener"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.uv]
package = true
